--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,7 +9,7 @@
         {{#products}}
             {{#images}}
             <div class="gallery-item">
-                <img src="/uploads/{{imageURL}}" alt="{{../title}}" onerror="this.src='/images/no-image.jpg'">
+                <img src="https://storage.googleapis.com/iluvit-uploads/{{imageURL}}" alt="{{../title}}" onerror="this.src='/images/no-image.jpg'">
             </div>
             {{/images}}
         {{/products}}
