--- a/views/users/all-products.mustache
+++ b/views/users/all-products.mustache
@@ -7,6 +7,20 @@
     <div class="alert alert-{{type}}">{{message}}</div>
     {{/message}}
 
+    <!-- Search Form -->
+    <div class="row mb-4">
+        <div class="col-md-6">
+            <form action="/users/all-products" method="GET" class="search-form">
+                <div class="input-group">
+                    <input type="text" name="search" class="form-control" placeholder="Search products..." value="{{searchQuery}}">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-secondary" style="height: 38px; padding: 0.375rem 0.75rem;">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <div class="row">
         {{#products}}
         <div class="col-md-4 mb-4">
